--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <!--    alert(1);-->
 <!--</script>-->
 <script src="script.js"></script>
+<script src="singleUserCommunicate.js"></script>
 </body>
 </html>
